Fix sidebar link ordering and playgound input on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,12 @@ body {
     display: none;
   }
 
+  .p-inputgroup-addon {
+    width: 45% !important;
+    font-size: 14px;
+    min-width: 0px !important;
+  }
+
   .main-content {
     width: 100%;
     padding: 1rem;
